--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     
-<button id="placeOrderBtn">Slutför köp</button>    
-<a href="order.php">ORDER FFS</a>
+<button id="placeOrderBtn">Slutför köp</button>
+<button id="deleteOrderBtn">tabort order</button>      
+<a href="./order.html">ORDER FFS</a>
 
 <div id="produktBox">
 
