--- a/order.html
+++ b/order.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Old orders</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="order.css">
     <script defer src="order.js"></script>
 </head>
 <body>
-    <div id="oldOrders">
+    <main>
 
-
-
-
-    </div>
-
+    </main>
 
 
 </body>
